# static_dir

./: Cargo.toml
src/: lib.rs
